chora: config swagger documentation and add login docs
